--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -23,16 +23,9 @@
 	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-114946810-1', 'auto');
-	ga('Save', 'Click');
+	ga('send', 'pageview');
 	</script>
 
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-114946810-1');
-</script>
 	<title>Flex</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
