--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -56,7 +56,7 @@
 </script>
     
 </head>
-<form id="libraryForm" action="/library" method="POST">
+<form id="libraryForm" action="/library/data" method="POST">
 <body>
 	<h3>Workout
 			<button type="button" class="btn btn-lg" onclick="addWorkout({{workout.length}})" id="addbtn" aria-label="Left Align">
