created userprofile.handlebars and added fb name to library page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,8 +24,8 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
-    <link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
+	<link href="/css/index.css" rel="stylesheet">
 	 
 	<nav class="navbar navbar-toggleable-md navbar-light" id="navigation">
 	  	<div class="container-fluid">
@@ -43,36 +43,28 @@
 		  <label for="pwd">Password:</label>
 		  <input type="password" class="form-control" id="pwd">
 		  <br/>
-
-		  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"
-		  onclick="submitFBClicked()" id="submit" >
-		</fb:login-button>
 		  <button class="btn" onclick="submitClicked()" id="submit">Submit</button>
 		  <br></br>
 		  <br>
+			<fb:login-button scope="public_profile,email" onlogin="window.location='/library'">
+			</fb:login-button>
 		</br>
 		</div>
 
 
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/bootstrap.min.js"></script>
-		<script src="../routes/index.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<!-- <script src="../index.js"></script> -->
 		{{> facebook}}
-		<script src="/js/facebook.js"></script>
+		<!-- <script src="/js/facebook.js"></script> -->
+
 	</body>
 	<script type="text/javascript" href="index"></script>
-	<!--//<script>
-		//function submitClicked(){
-		//	location.href = "/library";
-		//};
-	//</script> -->
-
 	<script>
-		function submitFBClicked(){
-			location.href = "/library";
+		function submitClicked(){
+			location.href = "library";
 		};
-	</script> 
-
+	</script>
 
 <!-- SCRIPT -->
 
