--- a/public/css/index.css
+++ b/public/css/index.css
@@ -553,3 +553,50 @@ button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle{
 .editingButtonsDiv{
     overflow:hidden;
 }
+
+
+/*-----------USER PROFILE------------*/
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 4px; /* 5px rounded corners */
+    transition: 0.3s;
+    max-width: 100%;
+    margin-top: 15px;
+    margin-bottom: 50px;
+}
+
+/* Add some padding inside the card container */
+.container-1 {
+    padding: 2px 16px;
+}
+
+.userbackbtn {
+    margin-top: 20px;
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+img {
+    border-radius: 5px 5px 0 0;
+}
+
+/* Create two unequal columns that floats next to each other */
+.column {
+    float: left;
+    padding: 10px;
+}
+
+.left {
+  width: 75%;
+}
+
+.right {
+  width: 25%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
