--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<!-- Google Analytics Content Experiment code -->
-	<script>function utmx_section(){}function utmx(){}(function(){var
+<!-- 	<script>function utmx_section(){}function utmx(){}(function(){var
 	k='170665669-1',d=document,l=d.location,c=d.cookie;
 	if(l.search.indexOf('utm_expid='+k)>0)return;
 	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
@@ -12,11 +12,11 @@
 	'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
 	valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-	</script><script>utmx('url','A/B');</script>
+	</script><script>utmx('url','A/B');</script> -->
 	<!-- End of Google Analytics Content Experiment code -->
 
 
-	<script>
+<!-- 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -24,7 +24,7 @@
 
 	ga('create', 'UA-114946810-1', 'auto');
 	ga('send', 'pageview');
-	</script>
+	</script>  -->
 
 	<title>Flex</title>	
 	<meta charset="utf-8">
@@ -34,8 +34,9 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
-    <link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/index.css" rel="stylesheet">
 
 	<style>
 	@import url('https://fonts.googleapis.com/css?family=Karla');
@@ -58,7 +59,7 @@
 </head>
 <form id="libraryForm" action="/library" method="POST">
 <body>
-	<h1 id="name">Username</h1>
+	<h1 style="text-align: center;"><i>Welcome <text id="name">Username</text>!</h1>
 	<br>
 
 	<h3>Workout
@@ -103,10 +104,10 @@
 		
 	{{/each}}
 <script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/bootstrap.min.js"></script>
-		<script src="../routes/index.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<!-- <script src="../routes/index.js"></script> -->
 		{{> facebook}}
-		<script src="/js/facebook.js"></script>
+	<!-- 	<script src="/js/facebook.js"></script> -->
 
 </body>
 
