changes to libray

--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -1,6 +1,5 @@
 <html>
 <head>
-<<<<<<< HEAD
 	<!-- Google Analytics Content Experiment code -->
 	<script>function utmx_section(){}function utmx(){}(function(){var
 	k='170665669-1',d=document,l=d.location,c=d.cookie;
@@ -60,7 +59,7 @@
 </head>
 <form id="libraryForm" action="/library" method="POST">
 <body>
-	<h1 style="text-align: center;"><i>Welcome <text id="name">Username</text>!</h1>
+	<h1 style="text-align: center;"><i>Welcome <text id="name">Username</text>!</i></h1>
 	<br>
 
 	<h3>Workout
