--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -12,6 +12,8 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
+  	  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 
@@ -20,12 +22,21 @@
 	</style>
 	<!-- this is a comment in HTML -->
 
-	<nav class="navbar navbar-toggleable-md navbar-light" id="navigation">
+	<!-- <nav class="navbar navbar-toggleable-md navbar-light" id="navigation">
 	  	<div class="container-fluid">
 	  		  <a id="title">flex</a>
 		</div>
-	</nav>
-	
+	</nav> -->
+	<div class="header" id="myHeader">
+	 	<h2 class="container-fluid">
+	 		<a href="/info">
+			<i class="material-icons" id="info-icon" onclick="back()">info</i>
+			</a>
+			<a href="/library">
+			Flex </a>
+			<i class="material-icons" id="accnt-icon" >account_circle</i>
+		</h2>
+	</div>
 </head>
 <script>
 	function home() {
