--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,6 +24,8 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
+  	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+     rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 	 
@@ -32,6 +34,7 @@
 	  		  <a id="title">flex</a>
 		</div>
 	</nav>
+
 </head>  
 
 	<body>
@@ -44,9 +47,9 @@
 		  <input type="password" class="form-control" id="pwd">
 		  <br/>
 
-		  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"
+		 <!--  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"
 		  onclick="submitFBClicked()" id="submit" >
-		</fb:login-button>
+		</fb:login-button> -->
 		  <button class="btn" onclick="submitClicked()" id="submit">Submit</button>
 		  <br></br>
 		  <br>
@@ -61,11 +64,11 @@
 		<script src="/js/facebook.js"></script>
 	</body>
 	<script type="text/javascript" href="index"></script>
-	<!--//<script>
-		//function submitClicked(){
-		//	location.href = "/library";
-		//};
-	//</script> -->
+	<script>
+		function submitClicked(){
+		location.href = "/library";
+		};
+	</script>
 
 	<script>
 		function submitFBClicked(){
